# XPlatform.core

./: CMakeLists.txt  README.md
docs/: Example.md  Functions.md  Types.md  Wiki.md
include/XPlatform.core/: XP_IObject.h  api.h  c_api.h  engine.h  ext_module.h  loader.h  module.h
src/: loader.cpp
src/engine/: engine.cpp  engine.h  engine_utils.cpp
src/ext_mod/: ext_mod.cpp  ext_mod.h
src/utils/: utils.cpp
